tests/dataset/job/compiler/c/q24.error
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c: In function ‘test_Q24_finds_voiced_action_movie_with_actress_named_An’:
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:420:11: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  420 |       tmp1.len) {
      |           ^
      |           ->
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:428:32: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  428 |               .data[i3] != tmp1.data[i3]) {
      |                                ^
      |                                ->
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:480:15: error: redefinition of ‘matches’
  480 |   list_string matches = list_string_create(3);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:475:15: note: previous definition of ‘matches’ with type ‘list_string’
  475 |   list_string matches = list_string_create(4);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:515:70: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  515 |                                      contains_list_string(matches, ci.note) &&
      |                                                                    ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:71:54: note: expected ‘char *’ but argument is of type ‘const char *’
   71 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:517:69: warning: passing argument 2 of ‘contains_list_string’ makes pointer from integer without a cast [-Wint-conversion]
  515 |                                      contains_list_string(matches, ci.note) &&
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  516 |                                          cn.country_code == "[us]" &&
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  517 |                                          it.info == "release dates" &&
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                     |
      |                                                                     int
  518 |                                          k.keyword) &&
      |                                          ~~~~~~~~~                   
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:71:54: note: expected ‘char *’ but argument is of type ‘int’
   71 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:520:42: error: request for member ‘starts_with’ in something not a structure or union
  520 |                                  (mi.info.starts_with("Japan:") &&
      |                                          ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:521:57: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  521 |                                       contains_string(mi.info, "201") ||
      |                                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:522:42: error: request for member ‘starts_with’ in something not a structure or union
  522 |                                   mi.info.starts_with("USA:") &&
      |                                          ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:523:57: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  523 |                                       contains_string(mi.info, "201")) &&
      |                                                       ~~^~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:525:51: warning: passing argument 1 of ‘contains_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  525 |                                  contains_string(n.name, "An") &&
      |                                                  ~^~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:77:34: note: expected ‘char *’ but argument is of type ‘const char *’
   77 | static int contains_string(char *s, char *sub) {
      |                            ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:563:23: error: conflicting types for ‘matches’; have ‘matches_item_list_t’
  563 |   matches_item_list_t matches = tmp4;
      |                       ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:480:15: note: previous definition of ‘matches’ with type ‘list_string’
  480 |   list_string matches = list_string_create(3);
      |               ^~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:564:14: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  564 |   int tmp6 = int_create(matches.len);
      |              ^~~~~~~~~~
      |              list_int_create
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:568:9: error: request for member ‘data’ in something not a structure or union
  568 |     tmp6.data[tmp7] = x.voiced_char_name;
      |         ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:571:7: error: request for member ‘len’ in something not a structure or union
  571 |   tmp6.len = tmp7;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:576:9: error: request for member ‘data’ in something not a structure or union
  576 |     tmp9.data[tmp10] = x.voicing_actress_name;
      |         ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:579:7: error: request for member ‘len’ in something not a structure or union
  579 |   tmp9.len = tmp10;
      |       ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:584:10: error: request for member ‘data’ in something not a structure or union
  584 |     tmp12.data[tmp13] = x.voiced_action_movie_jap_eng;
      |          ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:587:8: error: request for member ‘len’ in something not a structure or union
  587 |   tmp12.len = tmp13;
      |        ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:589:50: error: incompatible type for argument 1 of ‘_min_string’
  589 |       (result_t){.voiced_char_name = _min_string(tmp6),
      |                                                  ^~~~
      |                                                  |
      |                                                  int
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:590:54: error: incompatible type for argument 1 of ‘_min_string’
  590 |                  .voicing_actress_name = _min_string(tmp9),
      |                                                      ^~~~
      |                                                      |
      |                                                      int
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:591:61: error: incompatible type for argument 1 of ‘_min_string’
  591 |                  .voiced_action_movie_jap_eng = _min_string(tmp12)}};
      |                                                             ^~~~~
      |                                                             |
      |                                                             int
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:62:38: note: expected ‘list_string’ but argument is of type ‘int’
   62 | static char *_min_string(list_string v) {
      |                          ~~~~~~~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:601:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  601 |     _json_string(it.voiced_char_name);
      |                  ~~^~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:605:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  605 |     _json_string(it.voicing_actress_name);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:609:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  609 |     _json_string(it.voiced_action_movie_jap_eng);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:82:32: note: expected ‘char *’ but argument is of type ‘const char *’
   82 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:613:69: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  613 |   test_Q24_finds_voiced_action_movie_with_actress_named_An_result = result;
      |                                                                     ^~~~~~
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:616:12: error: request for member ‘data’ in something not a structure or union
  616 |   free(tmp6.data);
      |            ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:617:12: error: request for member ‘data’ in something not a structure or union
  617 |   free(tmp9.data);
      |            ^
/tmp/TestCCompiler_JOB_Goldenq24905173748/001/prog.c:618:13: error: request for member ‘data’ in something not a structure or union
  618 |   free(tmp12.data);
      |             ^
